--- a/about-us.html
+++ b/about-us.html
@@ -81,8 +81,11 @@
     Where to find us 
   </div>
 </div>
-<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1924.6840775272863!2d-7.318001860284603!3d54.993298960796466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2suk!4v1765794136659!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
+<div class="maps">
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2288.7668221616473!2d-7.321741623296854!3d54.994722172813056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485fe1832cb63751%3A0xa786e92322e9ddb2!2sFoyleside%20Shopping%20Centre!5e0!3m2!1sen!2suk!4v1767714759448!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
 <br><br><br><br><br><br>
 
 
@@ -202,7 +205,7 @@
     
 <li>Phone Number: 0734568363</li>
 <li>Email address: LifeInFrame@gmail.com</li>
-<li>Address</li>
+<li>Address: Foyleside Shopping Centre, Northern Ireland</li>
   </div>
 </div>
 
