--- a/staff.html
+++ b/staff.html
@@ -110,8 +110,15 @@
 <!--Footer -->
 
 <footer>
-
-
+<div class="card">
+  <div class="card-body">
+    Contact Details
+    
+<li>Phone Number: 0734568363</li>
+<li>Email address: LifeInFrame@gmail.com</li>
+<li>Address: Foyleside Shopping Centre, Northern Ireland</li>
+  </div>
+</div>
   
 </footer>
 
