--- a/contact-us.html
+++ b/contact-us.html
@@ -243,7 +243,7 @@
     
 <li>Phone Number: 0734568363</li>
 <li>Email address: LifeInFrame@gmail.com</li>
-<li>Address</li>
+<li>Address: Foyleside Shopping Centre, Northern Ireland</li>
   </div>
 </div>
 
