--- a/services.html
+++ b/services.html
@@ -94,12 +94,15 @@
 
 <footer> 
 
-<p>Contact Details
-Phone Number: 0734568363
-Email address: LifeInFrame@gmail.com
-Address:
-</p>
-
+<div class="card">
+  <div class="card-body">
+    Contact Details
+    
+<li>Phone Number: 0734568363</li>
+<li>Email address: LifeInFrame@gmail.com</li>
+<li>Address: Foyleside Shopping Centre, Northern Ireland</li>
+  </div>
+</div>
 </footer>
 
 
