--- a/about-us.html
+++ b/about-us.html
@@ -197,7 +197,7 @@
 
     <!--Footer start-->
 
-    <footer> 
+    <footer class="site-footer"> 
 
 <div class="card">
   <div class="card-body">
@@ -208,6 +208,18 @@
 <li>Address: Foyleside Shopping Centre, Northern Ireland</li>
   </div>
 </div>
+
+<div class="site-footer">
+  <div class="star-rating">
+    <div class="star filled"></div>
+    <div class="star filled"></div>
+    <div class="star filled"></div>
+    <div class="star filled"></div>
+    <div class="star"></div>
+  </div>
+
+
+
 
 </footer>
 
