--- a/contact-us.html
+++ b/contact-us.html
@@ -234,7 +234,7 @@
 
 <!--Footer -->
 
- <footer> 
+ <footer class="site-footer"> 
 
 
 <div class="card">
@@ -247,6 +247,19 @@
   </div>
 </div>
 
+
+
+
+<div class="site-footer">
+  <div class="star-rating">
+    <div class="star filled"></div>
+    <div class="star filled"></div>
+    <div class="star filled"></div>
+    <div class="star filled"></div>
+    <div class="star"></div>
+  </div>
+
+  
 </footer>
 
 
