--- a/products.html
+++ b/products.html
@@ -144,7 +144,7 @@
     <br>
     
     <br>
-     <footer> 
+  <footer class="site-footer"> 
 
 <div class="card">
   <div class="card-body">
@@ -155,6 +155,16 @@
 <li>Address: Foyleside Shopping Centre, Northern Ireland</li>
   </div>
 </div>
+
+
+<div class="site-footer">
+  <div class="star-rating">
+    <div class="star filled"></div>
+    <div class="star filled"></div>
+    <div class="star filled"></div>
+    <div class="star filled"></div>
+    <div class="star"></div>
+  </div>
 
 </footer>
 
