--- a/services.html
+++ b/services.html
@@ -92,7 +92,7 @@
 
 <br>
 
-<footer> 
+<footer class="site-footer"> 
 
 <div class="card">
   <div class="card-body">
@@ -103,8 +103,20 @@
 <li>Address: Foyleside Shopping Centre, Northern Ireland</li>
   </div>
 </div>
-</footer>
 
+
+
+<div class="site-footer">
+  <div class="star-rating">
+    <div class="star filled"></div>
+    <div class="star filled"></div>
+    <div class="star filled"></div>
+    <div class="star filled"></div>
+    <div class="star"></div>
+  </div>
+
+</footer>
+<!--Footer Ends-->
 
 
 
