--- a/staff.html
+++ b/staff.html
@@ -109,7 +109,7 @@
 
 <!--Footer -->
 
-<footer>
+<footer class="site-footer">
 <div class="card">
   <div class="card-body">
     Contact Details
@@ -117,6 +117,17 @@
 <li>Phone Number: 0734568363</li>
 <li>Email address: LifeInFrame@gmail.com</li>
 <li>Address: Foyleside Shopping Centre, Northern Ireland</li>
+  </div>
+</div>
+
+
+<div class="site-footer">
+  <div class="star-rating">
+    <div class="star filled"></div>
+    <div class="star filled"></div>
+    <div class="star filled"></div>
+    <div class="star filled"></div>
+    <div class="star"></div>
   </div>
 </div>
   
