--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
 
     <!--Footer start-->
-    <footer> 
+    <footer class="site-footer"> 
 
 
 <div class="card">
@@ -155,6 +155,19 @@
 <li>Address: Foyleside Shopping Centre, Northern Ireland</li>
   </div>
 </div>
+
+
+
+
+<div class="site-footer">
+  <div class="star-rating">
+    <div class="star filled"></div>
+    <div class="star filled"></div>
+    <div class="star filled"></div>
+    <div class="star filled"></div>
+    <div class="star"></div>
+  </div>
+
 
 </footer>
     <!--Footer end--> 
