--- a/products.html
+++ b/products.html
@@ -146,7 +146,7 @@
     <br>
   <footer class="site-footer"> 
 
-<div class="card">
+<div class="footer-card">
   <div class="card-body">
     Contact Details
     
