--- a/staff.html
+++ b/staff.html
@@ -110,7 +110,7 @@
 <!--Footer -->
 
 <footer class="site-footer">
-<div class="card">
+<div class="footer-card">
   <div class="card-body">
     Contact Details
     
