--- a/about-us.html
+++ b/about-us.html
@@ -199,7 +199,7 @@
 
     <footer class="site-footer"> 
 
-<div class="card">
+<div class="footer-card">
   <div class="card-body">
     Contact Details
     
