--- a/contact-us.html
+++ b/contact-us.html
@@ -237,7 +237,7 @@
  <footer class="site-footer"> 
 
 
-<div class="card">
+<div class="footer-card">
   <div class="card-body">
     Contact Details
     
