--- a/services.html
+++ b/services.html
@@ -94,7 +94,7 @@
 
 <footer class="site-footer"> 
 
-<div class="card">
+<div class="footer-card">
   <div class="card-body">
     Contact Details
     
