--- a/contact-us.html
+++ b/contact-us.html
@@ -77,9 +77,9 @@
 
 <!-- Main Start -->
 <div class="container mt-4">
-    <h3>CONTACT</h3>
+    
     <hr>
-    <h3 class="text-center">Contact Me Form</h3>
+    <h3 class="text-center">Contact Form</h3>
     <hr>
 
     <div class="container-fluid d-flex justify-content-center">
