--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 <br>
 
-<div class="card text-center">
+<div class="card-text-center">
   <div class="card-header">
     Featured
   </div>
@@ -139,6 +139,10 @@
   </div>
 </div>
 
+<br>
+<br>
+<br>
+<br>
 
 
 
