--- a/staff.html
+++ b/staff.html
@@ -53,7 +53,7 @@
      <div class="card mb-3" style="max-width: 750 px;">
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="..." class="img-fluid rounded-start" alt="...">
+      <img src="images/mary staff member.png" class="img-fluid rounded-start" alt="a woman with brown curly hair wearing a denim jacket">
     </div>
     <div class="col-md-8">
       <div class="card-body">
@@ -71,7 +71,7 @@
 <div class="card mb-3" style="max-width: 750 px;">
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="..." class="img-fluid rounded-start" alt="...">
+      <img src="images/harry staff member.png" class="img-fluid rounded-start" alt="a man with brown hair wearing a blue jumper">
     </div>
     <div class="col-md-8">
       <div class="card-body">
@@ -86,7 +86,7 @@
 <div class="card mb-3" style="max-width: 540 px;">
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="..." class="img-fluid rounded-start" alt="...">
+      <img src="images/sarah staff member.png" class="img-fluid rounded-start" alt="woman with brown hair wearing a navy jumper ">
     </div>
     <div class="col-md-8">
       <div class="card-body">
