--- a/services.html
+++ b/services.html
@@ -53,27 +53,27 @@
 
    <div class="card-group">
   <div class="card">
-    <img src="images/camera-image.jpg" class="card-img-top" alt="...">
+    <img src="images/camera-image.jpg" class="card-img-top" alt="An image of a camera">
     <div class="card-body">
       <h5 class="card-title">Photography</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+      <p class="card-text">We offer high-end professional photography services.</p>
+      <p class="card-text"><small class="text-body-secondary">Last updated 1 week ago</small></p>
     </div>
 
   <div class="card">
-    <img src="images/picture-framing.jpg" class="card-img-top" alt="...">
+    <img src="images/picture framing 2.jpg" class="card-img-top" alt="Man framing a picture">
     <div class="card-body">
       <h5 class="card-title">Framing</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+      <p class="card-text">We offer high-end professional framing services.</p>
+      <p class="card-text"><small class="text-body-secondary">Last updated 1 week ago</small></p>
     </div>
 
     <div class="card">
-    <img src="images/camera-image.jpg" class="card-img-top" alt="...">
+    <img src="images/canvas print 2.jpg" class="card-img-top" alt="an  image of a person with a canvas print">
     <div class="card-body">
       <h5 class="card-title">Printing</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+      <p class="card-text">We offer high-end professional printing services.</p>
+      <p class="card-text"><small class="text-body-secondary">Last updated 1 week ago</small></p>
     </div>
  
 
