--- a/services.html
+++ b/services.html
@@ -51,7 +51,7 @@
 
     <!--Main Content-->
 
-   <div class="card-group">
+   <div class="card-group-services">
   <div class="card">
     <img src="images/camera-image.jpg" class="card-img-top" alt="An image of a camera">
     <div class="card-body">
