--- a/services.html
+++ b/services.html
@@ -53,7 +53,7 @@
 
    <div class="card-group-services">
   <div class="card">
-    <img src="images/camera-image.jpg" class="card-img-top" alt="An image of a camera">
+    <img src="images/camera-image.jpg" class="card-img-services" alt="An image of a camera">
     <div class="card-body">
       <h5 class="card-title">Photography</h5>
       <p class="card-text">We offer high-end professional photography services.</p>
@@ -61,7 +61,7 @@
     </div>
 
   <div class="card">
-    <img src="images/picture framing 2.jpg" class="card-img-top" alt="Man framing a picture">
+    <img src="images/picture framing 2.jpg" class="card-img-services" alt="Man framing a picture">
     <div class="card-body">
       <h5 class="card-title">Framing</h5>
       <p class="card-text">We offer high-end professional framing services.</p>
@@ -69,7 +69,7 @@
     </div>
 
     <div class="card">
-    <img src="images/canvas print 2.jpg" class="card-img-top" alt="an  image of a person with a canvas print">
+    <img src="images/canvas print 2.jpg" class="card-img-services" alt="an  image of a person with a canvas print">
     <div class="card-body">
       <h5 class="card-title">Printing</h5>
       <p class="card-text">We offer high-end professional printing services.</p>
