--- a/about-us.html
+++ b/about-us.html
@@ -111,7 +111,7 @@
               <div class="card h-100">
 
 
-                  <img src="images/photography workshop.jpg" class="card img top" alt="...">
+                  <img src="images/workshop 2.jpg" class="card img top" alt="...">
 
 
 
