--- a/staff.html
+++ b/staff.html
@@ -59,7 +59,7 @@
       <div class="card-body">
         <h5 class="card-title">Mary </h5>
         <p class="card-text">My main job at Life in Frame is to Frame the pictures thta could be prints or framing canvas   </p>
-        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+        <p class="card-text"><small class="text-body-secondary">Last updated 1 week ago</small></p>
       </div>
     </div>
   </div>
@@ -77,7 +77,7 @@
       <div class="card-body">
         <h5 class="card-title">Harry </h5>
         <p class="card-text">My role at Life In Frame is to print images that could be creating the photobooks, printing images or printing images on to canvas  </p>
-        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+        <p class="card-text"><small class="text-body-secondary">Last updated 1 week ago</small></p>
       </div>
     </div>
   </div>
@@ -92,7 +92,7 @@
       <div class="card-body">
         <h5 class="card-title">Sarah  </h5>
         <p class="card-text">My role at Life in Frame includes capturing the special moments for your events or the everyday momnets you want to keep</p>
-        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+        <p class="card-text"><small class="text-body-secondary">Last updated 1 week ago</small></p>
       </div>
     </div>
   </div>
