--- a/about-us.html
+++ b/about-us.html
@@ -58,7 +58,7 @@
     <div class="card" style="width: 900 px;  ">
   <div class="card-body">
     <h5 class="card-title">About Us </h5>
-  <p class="card-text">Life in Frame first started at a family weeding in 2022 where I fell in love with Photography as I was taakeing photos for the couple. I then had the idea to craete a business out of it and  Life in Frame was formed. To find out more aboutr our products and services  please click the link below .   </p>
+  <p class="card-text">Life in Frame first started at a family weeding in 2022 where I fell in love with Photography as I was taking photos for the couple. I then had the idea to create a business out of it and  Life in Frame was formed. To find out more about our products and services  please click the link below .   </p>
     <a href="services.html" class="card-link">Services </a>
     <a href="products.html" class="card-link">Products </a>
     
