--- a/products.html
+++ b/products.html
@@ -95,7 +95,9 @@
 <br> 
 <br> <br> 
 
-<h8>Product Pricing </h8>
+<div class="d-flex justify-content-center">
+  <h8>Product Pricing </h8>
+</div>
 <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header">
