--- a/staff.html
+++ b/staff.html
@@ -99,11 +99,7 @@
 </div>
 
 
-<!-- Javascripts -->
-     <script src="js/jquery-3.4.1.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap-4.4.1.js"></script>
-<script src="js/bootstrap.bundle.min.js"></script>
+
 
 
 
@@ -131,9 +127,18 @@
   </div>
 </div>
   
+
+<div> &copy; 2025 Life In Frame. All Rights Reserved. </div>
 </footer>
 
 
 
+
+
+<!-- Javascripts -->
+     <script src="js/jquery-3.4.1.min.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap-4.4.1.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
