--- a/services.html
+++ b/services.html
@@ -115,6 +115,9 @@
     <div class="star"></div>
   </div>
 
+
+
+<div> &copy; 2025 Life In Frame. All Rights Reserved. </div>
 </footer>
 <!--Footer Ends-->
 
