--- a/about-us.html
+++ b/about-us.html
@@ -90,7 +90,7 @@
 
 
 
-  
+<!--Testimonials section-->  
   
  <div class="card">
   <div class="card-body">
@@ -98,98 +98,26 @@
   </div>
 </div>
 
-  
-  
-  <section id="testimonials">
 
-    <div class="container my-5">
-        
-      <div class="row g-4">
-
-          <div class="col md-4">
-
-              <div class="card h-100">
+<!--Main Card section-->
 
 
-                  <img src="images/workshop 2.jpg" class="card img top" alt="...">
-
-
-
-                    <div class="card body">
-
-
-                      <h5 class="card-title">Jane </h5>
-                      <p class="card-text">I attended a workshop hosted by life in frame, the experince i've gained is invalueable </p>
-
-
-</div>
-</div>
-</div>
-</div>
-</div>
-</section>
-
-
-
-    <div class="container my-5">
-        <div class="row g-4">
-<!--Break point ofr one card-->
-          <div class="col md-4">
-
-              <div class="card h-100">
-
-
-                  <img src="images/countryside landscape.avif" class="card img top" alt="...">
-
-
-
-                    <div class="card body">
-
-
-                      <h5 class="card-title">Mary </h5>
-                      <p class="card-text">Gorgeous photo taken and it is framed beautifully and is proudly displayed in my home </p>
-
-
+<div class="card mb-3">
+  <img src="images/workshop 2.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Jane</h5>
+    <p class="card-text">I attended a workshop hosted by life in frame, the experience I've gained is invaluable.</p>
+    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
   </div>
 </div>
+<div class="card">
+  <div class="card-body">
+    <h5 class="card-title">Clare</h5>
+    <p class="card-text">Gorgeous photo taken, proudly displayed in my home</p>
+    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+  </div>
+  <img src="images/countryside-trees.jpg" class="card-img-bottom" alt="...">
 </div>
-</div>
-</div>
-</div>
-</section>
-
-
-
-
-<div class="container my-5">
-        
-      <div class="row g-4">
-
-          <div class="col md-4">
-
-              <div class="card h-100">
-
-
-                  <img src="images/john wedding.jpg" class="card img top" alt="...">
-
-
-
-                    <div class="card body">
-
-
-                      <h5 class="card-title">John</h5>
-                      <p class="card-text">All of the team are so lovely and made our day very special </p>
-
-
-</div>
-</div>
-</div>
-</div>
-</div>
-<!-- Div put in wrong place-->
-
-
-
 
 
 
