--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   <img src="images/LOGO.webp" class="rounded-circle" width="40" height="40">
   
  
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" 
+  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
  
 </button>
@@ -139,8 +140,6 @@
 </div>
 
 
-
-
 <div class="site-footer">
   <div class="star-rating">
     <div class="star filled"></div>
@@ -150,12 +149,7 @@
     <div class="star"></div>
   </div>
 
-
-
 <div> &copy; 2025 Life In Frame. All Rights Reserved. </div>
-
-
-
 
 
 </footer>
@@ -171,3 +165,4 @@
     
 </body>
 </html>
+
