--- a/staff.html
+++ b/staff.html
@@ -50,58 +50,47 @@
 
 
     <!-- Main Content -->
-     <div class="card mb-3" style="max-width: 750 px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="images/mary staff member.png" class="img-fluid rounded-start" alt="a woman with brown curly hair wearing a denim jacket">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Mary </h5>
-        <p class="card-text">My main job at Life in Frame is to Frame the pictures thta could be prints or framing canvas   </p>
-        <p class="card-text"><small class="text-body-secondary">Last updated 1 week ago</small></p>
-      </div>
-    </div>
-  </div>
+
+    <!--Staff Details Section-->
+
+
+<div class="container mt-5">
+  <div class="row"> 
+    <div class="col text-center">
+      <h2>Meet Our Team</h2>
+      <p>At Life In Frame, our dedicated team is passionate about capturing your precious moments and transforming them into timeless memories. Get to know the talented individuals who make it all possible:</p>
+
+
+    <!--Tab section-->
+
+    <div class="tab">
+  <button class="tablinks" onclick="openTab(event, 'Mary')">Mary</button>
+  <button class="tablinks" onclick="openTab(event, 'Harry')">Harry</button>
+  <button class="tablinks" onclick="openTab(event, 'Sarah')">Sarah</button>
 </div>
 
 
-
-
-<div class="card mb-3" style="max-width: 750 px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="images/harry staff member.png" class="img-fluid rounded-start" alt="a man with brown hair wearing a blue jumper">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Harry </h5>
-        <p class="card-text">My role at Life In Frame is to print images that could be creating the photobooks, printing images or printing images on to canvas  </p>
-        <p class="card-text"><small class="text-body-secondary">Last updated 1 week ago</small></p>
-      </div>
-    </div>
-  </div>
+<div id="Mary" class="tabcontent">
+  <h3>Mary</h3>
+  <p>My role here at life in frame is print the photographs taken onto canvas, I also create the photo books   </p>
+  <img src="images/mary staff member.png" class="img-fluid rounded-start" alt="a woman with brown curly hair wearing a denim jacket">
 </div>
 
-<div class="card mb-3" style="max-width: 540 px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="images/sarah staff member.png" class="img-fluid rounded-start" alt="woman with brown hair wearing a navy jumper ">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Sarah  </h5>
-        <p class="card-text">My role at Life in Frame includes capturing the special moments for your events or the everyday momnets you want to keep</p>
-        <p class="card-text"><small class="text-body-secondary">Last updated 1 week ago</small></p>
-      </div>
-    </div>
-  </div>
+<div id="Harry" class="tabcontent">
+  <h3>Harry</h3>
+  <p>My role here at Life In Frame is to build frames and frame the photographs </p>
+  <img src="images/harry staff member.png" class="img-fluid rounded-start" alt="a man with brown hair wearing a blue jumper">
 </div>
 
+<div id="Sarah" class="tabcontent">
+  <h3>Sarah </h3>
+  <p>My role at life in frame is to take the photographs, I am also the business founder</p>
+  <img src="images/sarah staff member.png" class="img-fluid rounded-start" alt="woman with brown hair wearing a navy jumper ">
+</div>
 
+    <!--Tab section end-->
 
-
-
+    <!--Main content end-->
 
 <!--Footer -->
 
