--- a/about-us.html
+++ b/about-us.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testing: Landing Page</title>
+    <title>About Us</title>
 
     <!--Bootstrap-->
     <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
@@ -74,7 +74,7 @@
 
 
 
-<!--Where to find us -->
+<!--Google Maps Section -->
 
 <div class="card">
   <div class="card-body">
@@ -101,25 +101,25 @@
 
 <!--Main Card section-->
 
-
+<!--Testimonial Cards-->
 <div class="card mb-3">
   <img src="images/workshop 2.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Jane</h5>
     <p class="card-text">I attended a workshop hosted by life in frame, the experience I've gained is invaluable.</p>
-    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+    <p class="card-text"><small class="text-body-secondary">Last updated 1 week ago</small></p>
   </div>
 </div>
 <div class="card">
   <div class="card-body">
     <h5 class="card-title">Clare</h5>
     <p class="card-text">Gorgeous photo taken, proudly displayed in my home</p>
-    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+    <p class="card-text"><small class="text-body-secondary">Last updated 1 week ago</small></p>
   </div>
-  <img src="images/countryside-trees.jpg" class="card-img-bottom" alt="...">
+  <img src="images/lake view.jpg" class="card-img-bottom" alt="...">
 </div>
 
-
+<!--End of Testimonial Cards-->
 
     <!--Main content end--> 
 
@@ -128,7 +128,7 @@
     <footer class="site-footer"> 
 
 <div class="footer-card">
-  <div class="card-body">
+  <div class="Footer-card-body">
     Contact Details
     
 <li>Phone Number: 0734568363</li>
@@ -136,6 +136,21 @@
 <li>Address: Foyleside Shopping Centre, Northern Ireland</li>
   </div>
 </div>
+
+
+<!--Social Media Icons Section-->
+
+<!--Linking to external stylesheets-->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<!--Icon Code-->
+
+<div class="social-icons">
+<a href="#" class="fa fa-facebook"></a>
+  <a href="#" class="fa fa-instagram"></a>
+  <a href="#" class="fa fa-twitter"></a>
+</div>
+<!--end of icon section-->
 
 <div class="site-footer">
   <div class="star-rating">
