--- a/staff.html
+++ b/staff.html
@@ -91,7 +91,7 @@
 <!--JavaScript for Tabs-->
 
 <script>
-function openCity(evt, TabName) {
+function openTab(evt, TabName) {
   var i, tabcontent, tablinks;
   tabcontent = document.getElementsByClassName("tabcontent");
   for (i = 0; i < tabcontent.length; i++) {
@@ -105,6 +105,7 @@ function openCity(evt, TabName) {
   evt.currentTarget.className += " active";
 }
 </script>
+
 
 
 
@@ -123,7 +124,7 @@ function openCity(evt, TabName) {
 
 <footer class="site-footer">
 <div class="footer-card">
-  <div class="card-body">
+  <div class="Footer-card-body">
     Contact Details
     
 <li>Phone Number: 0734568363</li>
@@ -131,6 +132,22 @@ function openCity(evt, TabName) {
 <li>Address: Foyleside Shopping Centre, Northern Ireland</li>
   </div>
 </div>
+
+<!--Social Media Icons Section-->
+
+<!--Linking to external stylesheets-->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<!--Icon Code-->
+
+<div class="social-icons">
+<a href="#" class="fa fa-facebook"></a>
+  <a href="#" class="fa fa-instagram"></a>
+  <a href="#" class="fa fa-twitter"></a>
+</div>
+<!--end of icon section-->
+
+
 
 <!--Star Rating Section-->
 <div class="site-footer">
