--- a/contact-us.html
+++ b/contact-us.html
@@ -238,7 +238,7 @@
 
 
 <div class="footer-card">
-  <div class="card-body">
+  <div class="footer-card-body">
     Contact Details
     
 <li>Phone Number: 0734568363</li>
@@ -247,8 +247,19 @@
   </div>
 </div>
 
+<!--Social Media Icons Section-->
 
+<!--Linking to external stylesheets-->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<!--Icon Code-->
+
+<div class="social-icons">
+<a href="#" class="fa fa-facebook"></a>
+  <a href="#" class="fa fa-instagram"></a>
+  <a href="#" class="fa fa-twitter"></a>
+</div>
+<!--end of icon section-->
 
 <div class="site-footer">
   <div class="star-rating">
