--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
 
 <div class="footer-card">
-  <div class="card-body">
+  <div class="Footer-card-body">
     Contact Details
     
 <li>Phone Number: 0734568363</li>
@@ -138,6 +138,25 @@
 <li>Address: Foyleside Shopping Centre, Northern Ireland</li>
   </div>
 </div>
+
+<!--Social Media Icons Section-->
+
+<!--Linking to external stylesheets-->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<!--Icon Code-->
+
+<div class="social-icons">
+<a href="#" class="fa fa-facebook"></a>
+  <a href="#" class="fa fa-instagram"></a>
+  <a href="#" class="fa fa-twitter"></a>
+</div>
+<!--end of icon section-->
+
+
+
+
+
 
 
 <div class="site-footer">
