--- a/products.html
+++ b/products.html
@@ -149,10 +149,13 @@
     <br>
     
     <br>
+
+
+    <!--Footer Content Start-->
   <footer class="site-footer"> 
 
 <div class="footer-card">
-  <div class="card-body">
+  <div class="Footer-card-body">
     Contact Details
     
 <li>Phone Number: 0734568363</li>
@@ -160,6 +163,25 @@
 <li>Address: Foyleside Shopping Centre, Northern Ireland</li>
   </div>
 </div>
+
+
+<!--Social Media Icons Section-->
+
+<!--Linking to external stylesheets-->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<!--Icon Code-->
+
+<div class="social-icons">
+<a href="#" class="fa fa-facebook"></a>
+  <a href="#" class="fa fa-instagram"></a>
+  <a href="#" class="fa fa-twitter"></a>
+</div>
+<!--end of icon section-->
+
+
+
+
 
 
 <div class="site-footer">
@@ -178,7 +200,7 @@
 <div> &copy; 2025 Life In Frame. All Rights Reserved. </div>
 </footer>
 
-
+<!--Footer Content End-->
 
 
     <!-- Javascripts -->
