--- a/staff.html
+++ b/staff.html
@@ -107,10 +107,28 @@ function openTab(evt, TabName) {
 </script>
 
 
+<br>
+<br>
+</div>
+</div> 
+
+<!--Enquiry Card Section-->
+
+</div>
+<div class="card text-center">
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Enquiries about joining the team</h5>
+    <p class="card-text">To enquire about joining the team, you can get in touch with us by the contact form, social media 
+      and contact details provided in the footer section of the website. We look forward to hearing from you!
+    </p>
+    <a href="contact-us.html" class="btn btn-primary">Contact Us</a>
+  </div>
+</div>
 
 
 
-    <!--Tab section end-->
+<!--Tab section end-->
 
     <!--Main content end-->
 <br>
