--- a/staff.html
+++ b/staff.html
@@ -177,17 +177,11 @@ function openTab(evt, TabName) {
     <div class="star"></div>
   </div>
 </div>
-  
-
-
-
-
+<!--end of star rating section-->
 
 
 <div> &copy; 2025 Life In Frame. All Rights Reserved. </div>
 </footer>
-
-
 
 
 
