--- a/about-us.html
+++ b/about-us.html
@@ -130,11 +130,13 @@
 <div class="footer-card">
   <div class="Footer-card-body">
     Contact Details
-    
+  <ul class="no-bullets">  
 <li>Phone Number: 0734568363</li>
 <li>Email address: LifeInFrame@gmail.com</li>
 <li>Address: Foyleside Shopping Centre, Northern Ireland</li>
-  </div>
+  </ul>  
+
+</div>
 </div>
 
 
