--- a/contact-us.html
+++ b/contact-us.html
@@ -240,11 +240,13 @@
 <div class="footer-card">
   <div class="footer-card-body">
     Contact Details
-    
+    <ul class="no-bullets">
 <li>Phone Number: 0734568363</li>
 <li>Email address: LifeInFrame@gmail.com</li>
 <li>Address: Foyleside Shopping Centre, Northern Ireland</li>
-  </div>
+ 
+    </ul>
+</div>
 </div>
 
 <!--Social Media Icons Section-->
