--- a/products.html
+++ b/products.html
@@ -157,11 +157,13 @@
 <div class="footer-card">
   <div class="Footer-card-body">
     Contact Details
-    
+    <ul class="no-bullets">
 <li>Phone Number: 0734568363</li>
 <li>Email address: LifeInFrame@gmail.com</li>
 <li>Address: Foyleside Shopping Centre, Northern Ireland</li>
-  </div>
+ </ul>
+
+</div>
 </div>
 
 
@@ -192,9 +194,6 @@
     <div class="star filled"></div>
     <div class="star"></div>
   </div>
-
-
-
 
 
 <div> &copy; 2025 Life In Frame. All Rights Reserved. </div>
