--- a/about-us.html
+++ b/about-us.html
@@ -110,6 +110,7 @@
     <p class="card-text"><small class="text-body-secondary">Last updated 1 week ago</small></p>
   </div>
 </div>
+<!--Second Testimonial Card--> 
 <div class="card">
   <div class="card-body">
     <h5 class="card-title">Clare</h5>
