--- a/contact-us.html
+++ b/contact-us.html
@@ -201,7 +201,7 @@
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js">
 </script>
 
-<!-- Optional JS Function -->
+<!-- JS Function -->
 <script>
     function myFormSubmits(event) {
         event.preventDefault();
