--- a/products.html
+++ b/products.html
@@ -98,6 +98,8 @@
 <div class="d-flex justify-content-center">
   <h8>Product Pricing </h8>
 </div>
+<!--Accordion Section-->
+<!--Photography Package Accordion Item-->
 <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header">
@@ -112,6 +114,7 @@
       </div>
     </div>
   </div>
+  <!--- Landscape Photography Accordion Item-->
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" 
@@ -125,6 +128,7 @@
       </div>
     </div>
   </div>
+  <!--Start of Photobook Accordion Item-->
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" 
@@ -140,7 +144,7 @@
   </div>
 </div>
 
-
+<!--End of Accordion Section-->
     <!--Main content end--> 
 
 
