--- a/staff.html
+++ b/staff.html
@@ -63,6 +63,7 @@
 
     <!--Tab section-->
 
+    <!--Tab buttons for each staff member -->
     <div class="tab">
   <button class="tablinks" onclick="openTab(event, 'Mary')">Mary</button>
   <button class="tablinks" onclick="openTab(event, 'Harry')">Harry</button>
@@ -88,6 +89,7 @@
   <img src="images/sarah staff member.png" class="img-fluid rounded-start" alt="woman with brown hair wearing a navy jumper ">
 </div>
 
+<!--End of Tab Content-->
 <!--JavaScript for Tabs-->
 
 <script>
@@ -122,7 +124,7 @@ function openTab(evt, TabName) {
     <p class="card-text">To enquire about joining the team, you can get in touch with us by the contact form, social media 
       and contact details provided in the footer section of the website. We look forward to hearing from you!
     </p>
-    <a href="contact-us.html" class="btn btn-primary">Contact Us</a>
+    <a href="contact-us. html" class="btn btn-primary">Contact Us</a>
   </div>
 </div>
 
