--- a/about-us.html
+++ b/about-us.html
@@ -17,7 +17,7 @@
     <!--Nav start--> 
 
   <nav class="navbar navbar-expand-lg navbar-custom">
-  <a class="navbar-brand" href="#">Life In Frame </a>
+  <a class="navbar-brand" href=" https://shasson501.github.io/Web-Unit-8/">Life In Frame </a>
    <img src="images/LOGO.webp" class="rounded-circle" width="40" height="40">
   
  
