--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testing: Landing Page</title>
+    <title>Home Page</title>
 
     <!--Bootstrap-->
     <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
@@ -16,7 +16,7 @@
     <!--Nav start--> 
 
   <nav class="navbar navbar-expand-lg navbar-custom">
-  <a class="navbar-brand" href="#">Life In Frame </a>
+  <a class="navbar-brand" href=" https://shasson501.github.io/Web-Unit-8/">Life In Frame </a>
   <img src="images/LOGO.webp" class="rounded-circle" width="40" height="40">
   
  
