--- a/services.html
+++ b/services.html
@@ -16,7 +16,7 @@
     <!--Nav start--> 
 
   <nav class="navbar navbar-expand-lg navbar-custom">
-  <a class="navbar-brand" href="#">Life In Frame </a>
+  <a class="navbar-brand" href=" https://shasson501.github.io/Web-Unit-8/">Life In Frame </a>
    <img src="images/LOGO.webp" class="rounded-circle" width="40" height="40">
  
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
