--- a/products.html
+++ b/products.html
@@ -48,7 +48,7 @@
   </div>
 </nav>
 
-
+<!--Carousel Section -->
   
 <div id="carouselExampleCaptions" class="carousel slide">
   <div class="carousel-indicators">
