--- a/contact-us.html
+++ b/contact-us.html
@@ -279,6 +279,12 @@
 
 
 <!--Footer Ends -->
+
+<!--Custom scripting file -->
+<script src="js/formScript.js"></script>
+<!--Custom scripting file end -->
+
+
  <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap-4.4.1.js"></script>
