--- a/about-us.html
+++ b/about-us.html
@@ -103,7 +103,7 @@
 
 <!--Testimonial Cards-->
 <div class="card mb-3">
-  <img src="images/workshop 2.jpg" class="card-img-top" alt="...">
+  <img src="images/workshop 2.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Jane</h5>
     <p class="card-text">I attended a workshop hosted by life in frame, the experience I've gained is invaluable.</p>
